<resources>
    <string name="app_name">Infinite Forge</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="already_have_account">Already have an account? Log In</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
</resources>